[tool.poetry]
name = "financial-data-analysis"
version = "0.1.0"
description = "Financial data analysis environment with time series capabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
scikit-learn = "^1.2.0"
statsmodels = "^0.14.0"
jupyterlab = "^4.0.0"
ipykernel = "^6.22.0"
psycopg2-binary = "^2.9.5"
sqlalchemy = "^2.0.0"
alembic = "^1.10.0"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
httpx = "^0.24.0"
fastapi = "^0.95.0"
uvicorn = "^0.21.0"
pytest = "^7.3.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.0"
pylint = "^2.17.0"
pydantic = "^2.0.0"
pandas-ta = "^0.3.14b0"
# Commenting out ta-lib until we fix the build issues
# ta-lib = "^0.4.26"
plotly = "^5.14.0"
dash = "^2.9.0"
websockets = "^11.0.0"
aiohttp = "^3.8.4"
ccxt = "^3.0.0"
prophet = "^1.1.0"
ipywidgets = "^8.0.0"
timescale-vector = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.0"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pylint.messages_control]
disable = "C0111,R0903,C0103"

[tool.pylint.format]
max-line-length = "88"