[tool.poetry]
name = "financial-data-analysis"
version = "0.1.0"
description = "Financial data analysis environment with time series capabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"
pandas = "^2.1.0"
matplotlib = "^3.7.3"
seaborn = "^0.12.2"
scikit-learn = "^1.3.2"
statsmodels = "^0.14.0"
jupyterlab = "^4.0.9"
ipykernel = "^6.26.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
httpx = "^0.25.1"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
pandas-ta = "^0.3.14b0"
plotly = "^5.18.0"
dash = "^2.14.1"
websockets = "^12.0"
aiohttp = "^3.8.6"
ccxt = "^4.0.87"
ipywidgets = "^8.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pylint.messages_control]
disable = "C0111,R0903,C0103"

[tool.pylint.format]
max-line-length = "88"